# Agri-Predict

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  retrain.py  retrain_50crops.py  run_inference.py
.github/workflows/: ci.yml
artifacts/: labels.json  neural_net.pt  preprocessor.joblib
backend/: __init__.py
backend/app/: __init__.py  dependencies.py  main.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/services/: __init__.py
backend/app/services/inference/: __init__.py  runtime.py  service.py  types.py
docs/ADRs/: 0001-architecture.md  0002-weather-provider.md  0003-design-guards.md
docs/sequence/: 0001-recommendation-flow.md
ml/: __init__.py  features.py  registry.py  train.py
ml/data/: __init__.py  loader.py  synthetic_dataset.py
ml/models/: __init__.py  accuracy_test.py  nn_model.py  rf_model.py  xgb_model.py
model_artifacts/: labels.json  preprocessor.joblib
scripts/: __init__.py  check_design_guards.py
tests/: __init__.py  test_api.py  test_features.py  test_inference_runtime.py  test_loader.py  test_model_wrappers.py  test_registry.py  test_synthetic_dataset.py  test_weather_open_meteo.py
ui/: .gitignore  README.md  __init__.py  app.py  charts.py  requirements.txt  styles.py  utils.py
ui/.streamlit/: config.toml
ui/components/: __init__.py  geolocation.py
ui/components/geolocation_frontend/: index.html
ui/model_artifacts/: preprocessor.joblib
ui/pages/: __init__.py  about.py  dashboard.py  history.py  predict.py  soil.py  weather.py
(+4 files in other folders)
