[project]
name = "agripredict"
version = "0.1.0"
description = "Hybrid ML crop recommendations with live weather enrichment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle/pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "N",             # pep8-naming
  "RUF",           # ruff-specific
  "SIM",           # simplify
]
ignore = [
  "E501",  # line length handled by formatter pragmatically
]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/routes.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "joblib",
  "sklearn",
  "sklearn.*",
  "streamlit",
  "streamlit.*",
  "torch",
  "torch.*",
  "xgboost",
  "xgboost.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["backend", "ml"]
omit = [
  "ml/train.py",
  "scripts/*",
  "ui/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
